--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Quiz Podium</title>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700|Pacifico' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="app/app.css">
 </head>
 <body>
 <div class="banner">
@@ -48,6 +48,6 @@
 
 <div class="footer"></div>
 <script src="//www.parsecdn.com/js/parse-1.6.7.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="app/app.js"></script>
 </body>
 </html>
