--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="col">
         <div class="name" id="second">--</div>
         <div class="" id="secondScore">&nbsp;</div>
-        <img class="gift" src="img/chromecast.png" alt="" width="40%">
+        <img class="gift" src="img/chromecast_and_audio.png" alt="" width="40%">
     </div>
     <div class="col">
         <div class="name" id="first">--</div>
@@ -40,7 +40,7 @@
     <div class="col">
         <div class="name" id="third">--</div>
         <div class="" id="thirdScore">&nbsp;</div>
-        <img class="gift" src="img/raspberry.png" alt="" width="40%">
+        <img class="gift" src="img/chromecast.png" alt="" width="40%">
     </div>
 </div>
 
